// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fail login (invalid header) 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <!--0-->
  <!--0-->
  <div class=\\"login-form\\">
    <form>
      <div class=\\"group\\">
        <input name=\\"username\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Username</label>
      </div>
      <div class=\\"group\\">
        <input name=\\"password\\" type=\\"password\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Password</label>
      </div>
      <div class=\\"group\\">
        <button type=\\"submit\\"><span>Login</span></button>
      </div>
    </form>
  </div>
</main>
<footer> Sham 2018
  (v 0.0.8) </footer>
<!--1-->"
`;

exports[`fail login (invalid header) 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <ul class=\\"errors-panel\\">
    <li>Login fail</li>
  </ul>
  <!--0-->
  <!--0-->
  <div class=\\"login-form\\">
    <form>
      <div class=\\"group\\">
        <input name=\\"username\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Username</label>
      </div>
      <div class=\\"group\\">
        <input name=\\"password\\" type=\\"password\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Password</label>
      </div>
      <div class=\\"group\\">
        <button type=\\"submit\\"><span>Login</span></button>
      </div>
    </form>
  </div>
</main>
<footer> Sham 2018
  (v 0.0.8) </footer>
<!--1-->"
`;
